[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
itertools = "0.9.0"
re-parse = "0.1.0"
regex = "1.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
structopt = "0.3.21"
ux = "0.1.3"
automod = "1.0.0"
